feat(pwa): Implement comprehensive Progressive Web App capabilities (Phase 20)
Implemented full PWA support with service workers, background synchronization,
push notifications, and app installation capabilities. The grocery list app
can now be installed on mobile and desktop devices, works completely offline,
and syncs changes automatically in the background.

## Features Implemented

### Service Worker & Caching
- Custom service worker with Workbox 7.3.0 integration
- Smart caching strategies (cache-first, network-first, stale-while-revalidate)
- Offline-first functionality with complete app availability
- Cache management with automatic cleanup and expiration
- Network-first strategy for Zero sync API with offline fallback

### Background Synchronization
- Background Sync API integration for Chromium browsers
- Intelligent polling fallback for Firefox and Safari (30s interval)
- Three-tier fallback strategy ensures reliability across all browsers
- Integration with existing offline queue manager
- Manual sync trigger always available
- Works even when app is closed (Chromium)

### Push Notifications
- Complete push notification system with VAPID authentication
- 11 notification event types (items, lists, budget, conflicts)
- Frontend subscription management
- Backend notification controller with web-push
- Smart permission prompt (waits for user engagement)
- Database table for push subscriptions

### PWA Manifest & Installation
- Complete manifest.json with app metadata
- 13 PNG icon sizes (16x16 through 512x512)
- 2 maskable icons for Android adaptive icons
- Automated icon generation with Sharp library
- Green brand color theme (#4caf50)
- App shortcuts for quick actions
- Windows tile configuration

### Service Worker Lifecycle
- Automatic service worker registration
- Update detection and user-friendly prompt UI
- Skip waiting pattern with user consent
- ServiceWorkerContext for global state management
- Version management and cache cleanup

### UI Component

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ dist-ssr
 # Environment
 .env
 .env.local
+
+# PWA / Service Worker
+# Note: Generated service worker files are committed to git for production
+# dev-dist/ contains development service worker files
+dev-dist/
+.workbox-cache/
